# OpenHelix

./: .gitignore  Design_Ideas.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agentic_system/: __init__.py  __main__.py  cli.py  runtime.py
agentic_system/builtin_skills/: __init__.py
agentic_system/context/: __init__.py  knowledge_loader.py  prompt_builder.py  skill_loader.py
agentic_system/core/: __init__.py  action.py  agent.py  environment.py  loop.py  state.py
agentic_system/kernel/: __init__.py  agent_loop.py  executors.py  model_router.py  orchestrator.py  prompts.py  skills.py  storage.py
agentic_system/prompts/: agent_system_prompt.json
agentic_system/providers/: __init__.py  ollama.py  openai_compat.py
agentic_system/runtime/: __init__.py  approval.py  cli.py  host.py  sandbox.py
docs/: introduction.md  knowledge.md  quickstart.md  skills.md  storage.md
docs/design/: system_design.md
helix/: constants.py
helix/core/: __init__.py  (+7 more)
tests/: helpers.py  test_analyze_image_from_ollama_script.py  test_approval_outside_writes.py  test_context.py  test_core.py  test_delegate.py  test_docker_sandbox.py  test_generate_audio_script.py  test_generate_image_script.py  test_generate_video_script.py  test_host.py  test_host_sandbox.py  test_local_model_service.py  test_prepare_audio_model_script.py  test_prepare_model_script.py  test_prepare_video_model_script.py  test_runtime.py  test_runtime_kernel.py  test_search_online_context_skill.py  test_searxng_service.py  test_skill_creation_script.py  test_skills.py  test_subagent_simulation.py
(+100 files in other folders)
