[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-system"
version = "0.2.0"
description = "RL-inspired agent framework with universal loop, sandbox execution, and skill system."
requires-python = ">=3.10"
dependencies = [
  "prompt_toolkit>=3.0.0",
]

[project.scripts]
agentic-system = "agentic_system.runtime.cli:main"

[tool.setuptools.packages.find]
include = ["agentic_system*"]

[tool.setuptools.package-data]
agentic_system = [
  "prompts/*.json",
  "builtin_skills/**/SKILL.md",
  "builtin_skills/**/*.py",
  "builtin_skills/**/*.sh",
]
